Tue Jul 16 19:42:08 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (USHORT): Unused macro removed.

Tue Jul 16 19:18:51 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: slim a path of newobj_of().

	* gc.c (objspace): add a new field objspace::freelist, which contains
	  available RVALUEs.

	* gc.c (newobj_of): simply call new function `get_freeobj()'.
	  get_freeobj() returns objspace::freelist. If  objspace::freelist
	  is not available, refill objspace::freelist with a slot pointed by
	  objspace::heap::free_slots.

	* gc.c (before_gc_sweep): clear objspace::freelist.

	* gc.c (slot_sweep): clear slot::freelist.

	* gc.c (heaps_prepare_freeslot): renamed to heaps_prepare_freeslot.

	* gc.c (unlink_free_heap_slot): remove unused function.

	* gc.c (rb_free_const_table): remove unused function.

Tue Jul 16 19:05:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big_shift3): Big shift width is not a problem for right
	  shift.

Tue Jul 16 18:50:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_count): [DOC] fix typo.  Array#count uses ==, not
	  ===.  a question at asakusa.rb ML.

Tue Jul 16 18:35:48 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_karatsuba): Avoid duplicate calculation when
	  squaring.
	  (bary_mul_toom3_branch): Ditto.

Tue Jul 16 17:43:22 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (link_free_heap_slot): removed.

	* gc.c (slot_sweep): use `heaps_add_freeslot' instead of
	  `link_free_heap_slot'.

	* gc.c (assign_heap_slot): use local variable `slot' instead of
	  `heaps'.

Tue Jul 16 17:21:39 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (assign_heap_slot): refactoring variable names.

	* gc.c (slot_add_freeobj): added.

	* gc.c (heaps_add_freeslot): added.

	* gc.c (finalize_list, rb_gc_force_recycle, slot_sweep): use
	  `slot_add_freeobj' instead of modifying linked list directly.

Tue Jul 16 16:30:58 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (lazy_sweep): refactoring.
